<resources>
    <string name="app_name">AgendaContatos2</string>
    <string name="title_activity_main">Agenda de contatos 2</string>

    <string name="action_settings">Settings</string>
    <string name="contato_item_nome_label">Nome:</string>
    <string name="contato_item_endereco_label">Endereço</string>
    <string name="contato_item_email_label">Email</string>
    <string name="contato_item_telcom_label">Telefone comercial</string>
    <string name="contato_item_telres_label">Telefone residencial</string>
    <string name="title_activity_contato_show">Exibir contato</string>
    <string name="action_add">Adicionar contato</string>
    <string name="title_activity_contato_insert">Incluir contato</string>
    <string name="insert_contato_nome">Nome</string>
    <string name="insert_contato_email">Email</string>
    <string name="insert_contato_endereco">Endereço</string>
    <string name="insert_contato_telefone_residencial">Telefone residencial</string>
    <string name="insert_contato_telefone_comercial">Telefone comercial</string>
    <string name="insert_contato_save">Salvar</string>
    <string name="insert_status_ok">Contato adicionado com sucesso</string>
    <string name="action_remove">Remover</string>
    <string name="context_menu_selected_count">%1$d contatos</string>
    <string name="context_menu_title">Modificar contatos</string>
    <string name="action_context_remove">Deveria remover os contatos: %1$s</string>
    <string name="success_remove_contact">Contato(s) removido(s) com sucesso</string>
    <string name="failed_remove_contact">Houve um problema ao remover ao menos um dos contatos</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="insert_status_error">Por favor, preencha os campos obrigatórios</string>
    <string name="action_edit">Editar</string>
    <string name="edited_status_failed">Ocorreu um problema ao exibir o contato editado</string>
    <string name="title_activity_contato_edit">Editar contato</string>
    <string name="edit_status_ok">Contato editado com sucesso</string>
    <string name="action_save">Salvar</string>
</resources>
