<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufabc.padm.agendacontatos2.ContatoInsertEdit"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText android:id="@+id/insert_contato_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_contato_nome"
        android:inputType="textPersonName"/>
    <EditText android:id="@+id/insert_contato_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_contato_email"
        android:inputType="textEmailAddress"/>
    <EditText android:id="@+id/insert_contato_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_contato_endereco"
        android:inputType="textPostalAddress"/>
    <EditText android:id="@+id/insert_contato_telefone_residencial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_contato_telefone_residencial"
        android:inputType="phone"/>
    <EditText android:id="@+id/insert_contato_telefone_comercial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_contato_telefone_comercial"
        android:inputType="phone"/>

</LinearLayout>
